Resuelto problema de CrossOrigin y flujo de obtener cantidad de tweets completo

--- a/frontend/WebIR2018FrontendG18/src/app/tweets-form/tweets-form.component.html
+++ b/frontend/WebIR2018FrontendG18/src/app/tweets-form/tweets-form.component.html
@@ -1,7 +1,13 @@
 <form id="tweetsForm"> 
   <div class="form-group">
     <label for="exampleInputEmail1">Palabra de interes</label>
-    <input type="text" class="form-control" id="inputPolitico" aria-describedby="inputHelp" placeholder=" Ejemplo: Trump">
+    <input [(ngModel)]="palabra" [ngModelOptions]="{standalone: true}" type="text" class="form-control" id="inputPolitico" 
+    aria-describedby="inputHelp" placeholder=" Ejemplo: Trump">
   </div>
-  <button type="submit" class="btn btn-primary">Buscar Tweets</button>
+  <button type="button" (click)="buscarTweets($event)" class="btn btn-primary">Buscar Tweets</button>
 </form>
+
+
+<div id="divResult">
+<p>Ocurrencias: {{ocurrencias}}</p>
+</div>
