Grafica hardcodeada, falta pasar valores dinamicamente

--- a/frontend/WebIR2018FrontendG18/src/app/tweets-form/tweets-form.component.html
+++ b/frontend/WebIR2018FrontendG18/src/app/tweets-form/tweets-form.component.html
@@ -9,5 +9,7 @@
 
 
 <div id="divResult">
-<p>Ocurrencias: {{ocurrencias}}</p>
+<p>Ocurrencias: {{results.ocurrencias}}</p>
+<p>Fecha: {{results.fecha}}</p>
 </div>
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
