Arreglos en frontend

--- a/frontend/WebIR2018FrontendG18/src/app/app.component.html
+++ b/frontend/WebIR2018FrontendG18/src/app/app.component.html
@@ -5,7 +5,7 @@
     </h1>
   
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">Bruno Di Bello - 4887674-4</li>
+      <li class="list-group-item">Bruno Di Bello</li>
       <li class="list-group-item">Pablo Martinez</li>
       <li class="list-group-item">Juan Roquero</li>
       <li class="list-group-item">Maximiliano Barnech</li>
@@ -17,7 +17,7 @@
   
   <div id="divDescripcion">
         <p>
-          Esta aplicacion obtiene opiniones de los usuarios de twitter de distintas zonas de Uruguay y en determinados 
+          Esta aplicacion obtiene opiniones de los usuarios de Twitter dentro de la zona metropolitana y en determinados
           intervalos de tiempo sobre los distintos agentes politicos.
         </p>
   </div>
